--- a/Ansible/docker.yaml
+++ b/Ansible/docker.yaml
@@ -1,5 +1,5 @@
 - name: docker build and push
-  hosts: local  # Replace with the hostname or IP address of your target server
+  hosts: JenkinsSonarServer  # Replace with the hostname or IP address of your target server
   become: yes  # Run tasks with sudo privileges
 
   tasks:
@@ -8,21 +8,21 @@
         update_cache: yes   
 
     - name: Build Docker Image
-      command: docker build -t petstore .
+      command: docker build -t PETSHOP .
       args:
-        chdir: /var/lib/jenkins/workspace/petstore
+        chdir: /var/lib/jenkins/workspace/PETSHOP
 
     - name: tag image
-      command: docker tag petstore:latest sevenajay/petstore:latest 
+      command: docker tag PETSHOP:latest gabin75/PETSHOP:latest
 
     - name: Log in to Docker Hub
       community.docker.docker_login:
         registry_url: https://index.docker.io/v1/
-        username: dockerhub username
-        password: dockerhub password/PAT
+        username: gabin75
+        password: dckr_pat_FW1haXYIM6DNLq5SrCEQgoQTXCo
 
     - name: Push image
-      command: docker push sevenajay/petstore:latest
+      command: docker push gabin75/PETSHOP:latest
 
     - name: Run container
-      command: docker run -d --name pet1 -p 8081:8080 sevenajay/petstore:latest
+      command: docker run -d --name pet1 -p 8081:8080 gabin75/PETSHOP:latest
